--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -20,4 +20,4 @@ item.asymbler-orhanitium = Orhanitium
 # Blocks
 
 # Drils
-block.asymbler-naritium-drill.name = Наритиумая дрель
+block.asymbler-naritium-drill.name = Naritium drill
